--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <ul class="pages-list">
+        <li class="timer-item"><a href="./1-timer.html">Timer</a></li>
+        <li class="snackbar-item"><a href="./2-snackbar.html">Snackbar</a></li>
+      </ul>
     </main>
-
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
   </body>
 </html>
