--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -11,26 +11,28 @@
     <main>
       <a href="./index.html">Back</a>
 
-      <form class="form">
-        <label>
-          Delay (ms)
-          <input type="number" name="delay" required />
-        </label>
-
-        <fieldset>
-          <legend>State</legend>
+      <div class="wrapper">
+        <form class="form">
           <label>
-            <input type="radio" name="state" value="fulfilled" required />
-            Fulfilled
+            Delay (ms)
+            <input type="number" name="delay" required />
           </label>
-          <label>
-            <input type="radio" name="state" value="rejected" required />
-            Rejected
-          </label>
-        </fieldset>
 
-        <button type="submit">Create notification</button>
-      </form>
+          <fieldset>
+            <legend>State</legend>
+            <label>
+              <input type="radio" name="state" value="fulfilled" required />
+              Fulfilled
+            </label>
+            <label>
+              <input type="radio" name="state" value="rejected" required />
+              Rejected
+            </label>
+          </fieldset>
+
+          <button type="submit">Create notification</button>
+        </form>
+      </div>
     </main>
 
     <script type="module" src="./js/2-snackbar.js"></script>
